--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-default">
+        <nav class="container-fluid navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -26,32 +26,34 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Libreta <small>No olvides esta página.</small></a>
+                    <a class="navbar-brand" href="#">Libreta</a><p class="navbar-text">No olvides esta página.</p> 
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                    
                     <form class="navbar-form navbar-left" role="search">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="¿Que buscas?">
                         </div>
-                        <button type="submit" class="btn btn-default">Buscar</button>
+                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Buscar</button>
                     </form>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">Home </a></li>
+                        <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
                         <li><a href="#">Contacto</a></li>
                         <li><a href="#">Acerca de</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><button type="button" class="btn btn-success navbar-btn">Iniciar Sesión</button></li>
+                        <li><button type="button" class="btn btn-success navbar-btn" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus
+sagittis lacus vel augue laoreet rutrum faucibus."><span class="glyphicon glyphicon-user"></span> Iniciar Sesión</button></li>
                     </ul>
 
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-
-        <h1>Hello, world!</h1>
+        <div class="container">
+            <h1>Hello, world!</h1>
+        </div>
+        
 
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
