--- a/descargas.html
+++ b/descargas.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <title>Libreta</title>
+        <title>Libreta | Descargas</title>
 
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">HOME</a><p class="navbar-text">Estas en la pagina principal</p> 
+                    <a class="navbar-brand" href="descargas.html">DESCARGAS</a><p class="navbar-text">Estas en la pagina principal</p> 
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,8 +45,8 @@
                     </form>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
-                        <li><a href="descargas.html"><span class="fa fa-download"></span>&nbsp; Descargas</a></li>
+                        <li ><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+                        <li class="active"><a href="descargas.html"><span class="fa fa-download"></span>&nbsp; Descargas</a></li>
                         <li><a href="#"><span class="fa fa-envelope-o"></span>&nbsp; Contacto</a></li>
                         <li><a href="#"><span class="fa fa-info"></span>&nbsp; Acerca de</a></li>
                         <li><button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
@@ -121,7 +121,7 @@
         </nav>
         <div class="container">
             <div class="jumbotron">
-                <h1>Libreta</h1>
+                <h1>Descargas</h1>
                 <p>En esta pagina podras guardar toda la informacion de tus contactos, organizar eventos... </p>
                 <p><a class="btn btn-primary btn-lg" href="#" role="button">Leer más</a></p>
             </div>
