--- a/descargas.html
+++ b/descargas.html
@@ -31,7 +31,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="descargas.html">DESCARGAS</a><p class="navbar-text">Estas en la pagina principal</p> 
+                    <a class="navbar-brand" href="descargas.html">DESCARGAS</a><p class="navbar-text">Realiza tus descargas desde aquí...</p> 
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,8 +47,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li ><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
                         <li class="active"><a href="descargas.html"><span class="fa fa-download"></span>&nbsp; Descargas</a></li>
-                        <li><a href="#"><span class="fa fa-envelope-o"></span>&nbsp; Contacto</a></li>
-                        <li><a href="#"><span class="fa fa-info"></span>&nbsp; Acerca de</a></li>
+                        <li><a href="contactos.html"><span class="fa fa-envelope-o"></span>&nbsp; Contacto</a></li>
+                        <li><a href="info.html"><span class="fa fa-info"></span>&nbsp; Acerca de</a></li>
                         <li><button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
                     </ul>
 
@@ -122,7 +122,7 @@
         <div class="container">
             <div class="jumbotron">
                 <h1>Descargas</h1>
-                <p>En esta pagina podras guardar toda la informacion de tus contactos, organizar eventos... </p>
+                <p>En esta pagina podras guardar toda la informacion de tus contactos, organizar eventos...blablabla</p>
                 <p><a class="btn btn-primary btn-lg" href="#" role="button">Leer más</a></p>
             </div>
         </div>
