--- a/descargas.html
+++ b/descargas.html
@@ -18,6 +18,8 @@
 
         <!-- font awesone(iconos) -->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        
+         <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
