--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
             <div class="jumbotron">
                 <h1>Libreta</h1>
                 <p>En esta pagina podras guardar toda la informacion de tus contactos, organizar eventos... </p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Leer más</a></p>
+                <p><a class="btn btn-primary btn-lg" role="button" data-toggle="collapse" href="#collapseLeerMas" data-aria-expanded="false" data-aria-controls="collapseLeerMas">Leer más</a></p>
+                <div class="collapse" id="collapseLeerMas">
+  <div class="well">
+    mdsjfs fsdfjsdof fsdfonr freferghtyujk uikui l ioiñp  
+  </div>
+</div>
             </div>
         </div>
 
