--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </head>
     <body>
 
-        <nav class="container-fluid navbar navbar-default">
+        <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -39,20 +39,21 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
 
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="¿Que buscas?">
-                        </div>
-                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>&nbsp; Buscar</button>
-                    </form>
+                    
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
                         <li><a href="descargas.html"><span class="fa fa-download"></span>&nbsp; Descargas</a></li>
                         <li><a href="contactos.php"><span class="fa fa-envelope-o"></span>&nbsp; Contacto</a></li>
                         <li><a href="info.html"><span class="fa fa-info"></span>&nbsp; Acerca de</a></li>
-                        <li><button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
+                        <li>&nbsp; <button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
                     </ul>
+                    <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="¿Que buscas?">
+                        </div>
+                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>&nbsp; Buscar</button>
+                    </form>
 
                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -63,16 +64,15 @@
                                 </div>
                                 <div class="modal-body">
                                     <div class="row">
-                                        <div class="col-xs-6">
+                                        <div class="col-xs-12 col-md-6">
                                             <form class="pure-form pure-form-stacked">
                                                 <fieldset>
                                                     <legend>Inicio de Sesión</legend>
-
                                                     <label for="email">Email</label>
-                                                    <input id="email" type="email" placeholder="Email" required="required">
+                                                    <input id="email" type="email" class="pure-input-1" placeholder="Email" required="required">
 
                                                     <label for="password">Password</label>
-                                                    <input id="password" type="password" placeholder="Password" required="required">
+                                                    <input id="password" type="password" class="pure-input-1"  placeholder="Password" required="required">
 
                                                     <label for="remember" class="pure-checkbox">
                                                         <input id="remember" type="checkbox"> Recordar
@@ -82,28 +82,28 @@
                                                 </fieldset>
                                             </form>
                                         </div>
-                                        <div class="col-xs-6">
+                                        <div class="col-xs-12 col-md-6">
                                             <form class="pure-form pure-form-stacked">
                                                 <fieldset>
                                                     <legend>Registrarse</legend>
 
 
                                                     <label for="nombre-reg">Nombre</label>
-                                                    <input id="nombre-reg" type="text" placeholder="Nombre" required>
+                                                    <input id="nombre-reg" class="pure-input-1" type="text" placeholder="Nombre" required>
 
                                                     <label for="email-reg">Email</label>
-                                                    <input id="email-reg" type="email" placeholder="Email" required>
+                                                    <input id="email-reg" type="email" class="pure-input-1" placeholder="Email" required>
 
                                                     <label for="email-rep">Repita el Email</label>
-                                                    <input id="email-rep" type="email" placeholder="Repita el Email" required>
+                                                    <input id="email-rep" type="email" class="pure-input-1" placeholder="Repita el Email" required>
 
 
                                                     <label for="password-reg">Password</label>
-                                                    <input id="password-reg" type="password" placeholder="Password" required>
+                                                    <input id="password-reg" type="password" class="pure-input-1" placeholder="Password" required>
 
 
                                                     <label for="password-rep" >Repita la Password</label>
-                                                    <input id="password-rep" class="margen-inf-20" type="password" placeholder="Repita la Password" required>
+                                                    <input id="password-rep" class="margen-inf-20 pure-input-1" type="password" placeholder="Repita la Password" required>
                                                     <br/>
                                                     <button type="submit" class="btn btn-primary">Registrarse</button>
                                                 </fieldset>
@@ -118,8 +118,9 @@
                             </div>
                         </div>
 
-                    </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
+                    </div>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
         </nav>
         <div class="container">
             <div class="jumbotron">
