--- a/descargas.html
+++ b/descargas.html
@@ -23,7 +23,7 @@
     </head>
     <body>
 
-        <nav class="container-fluid navbar navbar-default">
+        <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -39,13 +39,6 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
 
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="¿Que buscas?">
-                        </div>
-                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>&nbsp; Buscar</button>
-                    </form>
-
                     <ul class="nav navbar-nav navbar-right">
                         <li ><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
                         <li class="active"><a href="descargas.html"><span class="fa fa-download"></span>&nbsp; Descargas</a></li>
@@ -53,6 +46,13 @@
                         <li><a href="info.html"><span class="fa fa-info"></span>&nbsp; Acerca de</a></li>
                         <li><button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
                     </ul>
+                    
+                       <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="¿Que buscas?">
+                        </div>
+                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>&nbsp; Buscar</button>
+                    </form>
 
                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -120,6 +120,7 @@
 
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
+            </div>
         </nav>
         <div class="container">
             <div class="jumbotron">
