cambios en contacto

--- a/info.html
+++ b/info.html
@@ -41,9 +41,9 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
                         <li><a href="descargas.html"><span class="fa fa-download"></span>&nbsp; Descargas</a></li>
-                        <li><a href="contactos.php"><span class="fa fa-envelope-o"></span>&nbsp; Contacto</a></li>
+                        <li><a href="contacto.html"><span class="fa fa-envelope-o"></span>&nbsp; Contacto</a></li>
                         <li class="active"><a href="info.html"><span class="fa fa-info"></span>&nbsp; Acerca de</a></li>
-                        <li><button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
+                        <li>&nbsp;&nbsp;<button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
                     </ul>
                     
                      <form class="navbar-form navbar-right" role="search">
