--- a/contacto.html
+++ b/contacto.html
@@ -5,9 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <title>Libreta | Home</title>
-
-        <!-- Bootstrap -->
+        <title>Libreta | Contactos</title>
+<!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- purecss -->
@@ -22,8 +21,7 @@
         <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
-
-        <nav class="navbar navbar-default">
+<nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -39,16 +37,15 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
 
-                    
-
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
                         <li><a href="descargas.html"><span class="fa fa-download"></span>&nbsp; Descargas</a></li>
-                        <li><a href="contacto.html"><span class="fa fa-envelope-o"></span>&nbsp; Contacto</a></li>
+                        <li class="active"><a href="contactos.php"><span class="fa fa-envelope-o"></span>&nbsp; Contacto</a></li>
                         <li><a href="info.html"><span class="fa fa-info"></span>&nbsp; Acerca de</a></li>
-                        <li>&nbsp; <button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
+                        <li>&nbsp;&nbsp;<button type="button" class="btn btn-success navbar-btn" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Entrar</button></li>
                     </ul>
-                    <form class="navbar-form navbar-right" role="search">
+                    
+                     <form class="navbar-form navbar-right" role="search">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="¿Que buscas?">
                         </div>
@@ -64,15 +61,16 @@
                                 </div>
                                 <div class="modal-body">
                                     <div class="row">
-                                        <div class="col-xs-12 col-md-6">
+                                        <div class="col-xs-6">
                                             <form class="pure-form pure-form-stacked">
                                                 <fieldset>
                                                     <legend>Inicio de Sesión</legend>
+
                                                     <label for="email">Email</label>
-                                                    <input id="email" type="email" class="pure-input-1" placeholder="Email" required="required">
+                                                    <input id="email" type="email" placeholder="Email" required="required">
 
                                                     <label for="password">Password</label>
-                                                    <input id="password" type="password" class="pure-input-1"  placeholder="Password" required="required">
+                                                    <input id="password" type="password" placeholder="Password" required="required">
 
                                                     <label for="remember" class="pure-checkbox">
                                                         <input id="remember" type="checkbox"> Recordar
@@ -82,28 +80,28 @@
                                                 </fieldset>
                                             </form>
                                         </div>
-                                        <div class="col-xs-12 col-md-6">
+                                        <div class="col-xs-6">
                                             <form class="pure-form pure-form-stacked">
                                                 <fieldset>
                                                     <legend>Registrarse</legend>
 
 
                                                     <label for="nombre-reg">Nombre</label>
-                                                    <input id="nombre-reg" class="pure-input-1" type="text" placeholder="Nombre" required>
+                                                    <input id="nombre-reg" type="text" placeholder="Nombre" required>
 
                                                     <label for="email-reg">Email</label>
-                                                    <input id="email-reg" type="email" class="pure-input-1" placeholder="Email" required>
+                                                    <input id="email-reg" type="email" placeholder="Email" required>
 
                                                     <label for="email-rep">Repita el Email</label>
-                                                    <input id="email-rep" type="email" class="pure-input-1" placeholder="Repita el Email" required>
+                                                    <input id="email-rep" type="email" placeholder="Repita el Email" required>
 
 
                                                     <label for="password-reg">Password</label>
-                                                    <input id="password-reg" type="password" class="pure-input-1" placeholder="Password" required>
+                                                    <input id="password-reg" type="password" placeholder="Password" required>
 
 
                                                     <label for="password-rep" >Repita la Password</label>
-                                                    <input id="password-rep" class="margen-inf-20 pure-input-1" type="password" placeholder="Repita la Password" required>
+                                                    <input id="password-rep" class="margen-inf-20" type="password" placeholder="Repita la Password" required>
                                                     <br/>
                                                     <button type="submit" class="btn btn-primary">Registrarse</button>
                                                 </fieldset>
@@ -118,20 +116,15 @@
                             </div>
                         </div>
 
-                    </div>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </div>
         </nav>
         <div class="container">
             <div class="jumbotron">
-                <h1>Libreta</h1>
+                <h1>Contactos</h1>
                 <p>En esta pagina podras guardar toda la informacion de tus contactos, organizar eventos... </p>
-                <p><a class="btn btn-primary btn-lg" role="button" data-toggle="collapse" href="#collapseLeerMas" data-aria-expanded="false" data-aria-controls="collapseLeerMas">Leer más</a></p>
-                <div class="collapse" id="collapseLeerMas">
-  <div class="well">
-    mdsjfs fsdfjsdof fsdfonr freferghtyujk uikui l ioiñp  
-  </div>
-</div>
+                <p><a class="btn btn-primary btn-lg" href="#" role="button">Leer más</a></p>
             </div>
         </div>
 
